--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^8.20.1",
+    "@react-three/fiber": "^7.0.26",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "d3": "^7.0.0",
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
+    "lodash.debounce": "^4.0.8",
+    "matter-js": "^0.18.0",
     "path": "^0.12.7",
     "pino": "^6.13.0",
     "prom-client": "^13.1.0",
@@ -17,7 +21,8 @@
     "react-dom": "^17.0.2",
     "react-jss": "^10.7.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "three": "^0.139.0"
   },
   "scripts": {
     "start": "react-scripts start",
