--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "editorial-data-viz-template",
+  "homepage": "https://rnagendr-cn.github.io/threejs-pixijs-matterjs",
   "version": "0.1.0",
   "main": "index.js",
   "private": true,
@@ -25,6 +26,8 @@
     "three": "^0.139.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.0",
     "plop": "^2.7.4",
     "prettier": "^2.3.2",
